fix footer spacing

--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -99,7 +99,10 @@
             }
         }
         .footer-rating{
-            img{
+            li{
+                &+li{
+                    margin-top:10px;
+                }
             }
         }
         .footer-links{
